Mon Jun  7 21:39:54 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * protocols/ace/INet/inet.mpc:

          Added the install_dir setting so that headers are installed to
          the correct directory.

        * bin/PerlACE/Run_Test.pm:

          New function GetArchDir() for use when a test script needs to
          know the ARCH directory for a given path.  This is only needed when
          the test passes the full path to an executable as a command-line
          argument to a different executable (used in CIAO).

        * tests/run_test.pl

          If we're using ARCH, set an environment variable ACE_EXE_SUB_DIR so
          that the individual tests can find executables and shared libraries.

        * tests/Based_Pointer_Test.cpp:
        * tests/Bug_2980_Regression_Test.cpp:
        * tests/DLL_Test.cpp:
        * tests/Process_Semaphore_Test.cpp:
        * tests/Process_Test.cpp:
        * tests/Signal_Test.cpp:

          These tests need to check ACE_EXE_SUB_DIR to find executables and
          shared libraries.

Mon Jun 07 08:33:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/BufferedStreamBuffer.h:
        * protocols/ace/INet/BufferedStreamBuffer.cpp:
          Fix for VC71 template compile problem.

Mon Jun 07 07:12:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/HTTP_Simple_exec.cpp:
          Fix for WChar compile problem.

Sun Jun 06 06:34:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/HTTP_Request.h:
        * protocols/ace/INet/HTTP_Response.h:
          Fix attempt for covariant return issue on LynxOS.

Sun Jun 06 06:25:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.h:
        * protocols/ace/INet/HTTP_URL.h:
        * protocols/ace/INet/HTTP_Status.h:
        * protocols/ace/INet/HTTP_IOStream.h:
        * protocols/ace/INet/HTTP_Request.h:
        * protocols/ace/INet/BufferedStreamBuffer.h: