@@ -153,7 +153,14 @@ main (int, char **)
           char buf[BUFSIZ];
 
           strcpy (buf, ace_root);
-          strcat (buf, "/lib/lib");
+          strcat (buf, "/lib/");
+          const char *subdir_env = getenv ("ACE_EXE_SUB_DIR");
+          if (subdir_env)
+            {
+              strcat (buf, subdir_env);
+              strcat (buf, "/");
+            }
+          strcat (buf, "lib");
 #if defined (ACE_LIB_NAME)
           strcat (buf, ACE_LIB_NAME);
 #else
